objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>AID Inc</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Approach</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Demonstrate%2FProposal</fullName>
        </values>
        <values>
            <fullName>Interview</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Validate</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Place Orders</fullName>
        <description>Place an Order from an Account</description>
        <isActive>true</isActive>
        <values>
            <fullName>Only for Orders</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Sales Oppty Path</fullName>
        <description>Aid in the Sales Oppty Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Approach</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Demonstrate%2FProposal</fullName>
        </values>
        <values>
            <fullName>Interview</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Reservation</fullName>
        </values>
        <values>
            <fullName>Validate</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AED_Device_Type__c</fullName>
        <label>AED Device Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Philips</fullName>
                </value>
                <value>
                    <fullName>Zoll Medical</fullName>
                </value>
                <value>
                    <fullName>EnPro</fullName>
                </value>
                <value>
                    <fullName>Physio-Control</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Group__c</fullName>
        <formula>Account.ccrz__E_AccountGroup__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Account Group - for Product and Price Selection on the Account</inlineHelpText>
        <label>Account Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>Account.Owner.FirstName+&apos; &apos;+Account.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Attendance__c</fullName>
        <label>Actual Attendance</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Submit for Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approved_Process_Deviations__c</fullName>
        <inlineHelpText>Approved deviations are outlined in the Description field of the Contract Object</inlineHelpText>
        <label>Approved Process Deviations</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes, select Contract Number above</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approved_for_Commision_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved for Commission Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approver_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approver_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approver_3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_SD_Territory__c</fullName>
        <label>Assigned SD Territory</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Multi</fullName>
                </value>
                <value>
                    <fullName>AES</fullName>
                    <label>AES/AQU/Academy</label>
                </value>
                <value>
                    <fullName>SCC</fullName>
                </value>
                <value>
                    <fullName>Central Mid West</fullName>
                </value>
                <value>
                    <fullName>Great Lakes</fullName>
                </value>
                <value>
                    <fullName>Keystone</fullName>
                </value>
                <value>
                    <fullName>Lone Star</fullName>
                </value>
                <value>
                    <fullName>Mid Atlantic</fullName>
                </value>
                <value>
                    <fullName>Mid South</fullName>
                </value>
                <value>
                    <fullName>New England</fullName>
                </value>
                <value>
                    <fullName>NY Metro</fullName>
                </value>
                <value>
                    <fullName>Pacific Northwest</fullName>
                </value>
                <value>
                    <fullName>Pacific South</fullName>
                </value>
                <value>
                    <fullName>South</fullName>
                </value>
                <value>
                    <fullName>Upper Mid West</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_Scheduler__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Scheduler</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGST_Activity_Type__c</fullName>
        <label>BGST Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FS</fullName>
                </value>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>AED</fullName>
                </value>
                <value>
                    <fullName>LTP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BGST_Industry__c</fullName>
        <description>Industry field used for the BGST Profile</description>
        <label>BGST Industry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Forestry, Fishing and Hunting</fullName>
                </value>
                <value>
                    <fullName>Mining, Quarrying, and Oil and Gas Extraction</fullName>
                </value>
                <value>
                    <fullName>Utilities</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Wholesale Trade</fullName>
                </value>
                <value>
                    <fullName>Retail Trade</fullName>
                </value>
                <value>
                    <fullName>Transportation and Warehousing</fullName>
                </value>
                <value>
                    <fullName>Information</fullName>
                </value>
                <value>
                    <fullName>Finance and Insurance</fullName>
                </value>
                <value>
                    <fullName>Real Estate and Rental and Leasing</fullName>
                </value>
                <value>
                    <fullName>Professional, Scientific and Technical Services</fullName>
                </value>
                <value>
                    <fullName>Management of Companies and Enterprises</fullName>
                </value>
                <value>
                    <fullName>Administrative and Support and Waste Management and Remediation Services</fullName>
                </value>
                <value>
                    <fullName>Educational Services</fullName>
                </value>
                <value>
                    <fullName>Health Care and Social Assistance</fullName>
                </value>
                <value>
                    <fullName>Arts, Entertainment, and Recreation</fullName>
                </value>
                <value>
                    <fullName>Accommodation and Food Services</fullName>
                </value>
                <value>
                    <fullName>Other Services, except Public Administration</fullName>
                </value>
                <value>
                    <fullName>ublic Administration</fullName>
                </value>
                <value>
                    <fullName>Unclassified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BGST_Lead_Source__c</fullName>
        <description>Lead Source Field use for the BGST Profile</description>
        <label>BGST Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IVR</fullName>
                </value>
                <value>
                    <fullName>TSC Transfer</fullName>
                </value>
                <value>
                    <fullName>Voice Mail</fullName>
                </value>
                <value>
                    <fullName>After-Hours Transfer Lead Form</fullName>
                </value>
                <value>
                    <fullName>Referral/Repeat Business</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BGST_Rating__c</fullName>
        <description>Rating Field used to pass the Lead rating for the BGST Profile</description>
        <label>BGST Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hot</fullName>
                </value>
                <value>
                    <fullName>Warm</fullName>
                </value>
                <value>
                    <fullName>Cold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BGST_Rep_Email__c</fullName>
        <description>If the opportunity owner is BGST rep, assign the an email address from the opportunity owner&apos;s record.</description>
        <formula>IF(BGST_Rep__c, Owner.Email,&quot;&quot;)</formula>
        <label>BGST Rep Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGST_Rep__c</fullName>
        <description>Checks opportunity owner profile and marks the BGST Rep checks check box BGST Rep if the opportunity owner profile matches one of the BGST User profiles</description>
        <formula>IF(OR(Owner.Profile.Name = &quot;ARC BGST Sales Admin&quot;, Owner.Profile.Name = &quot;ARC BGST Sales User&quot;), 

true, false)</formula>
        <inlineHelpText>Opportunity Owner is BGST Rep</inlineHelpText>
        <label>BGST Rep</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Books_for_Class__c</fullName>
        <inlineHelpText>Enter what books are required.</inlineHelpText>
        <label>Books for Class</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Break_Times__c</fullName>
        <inlineHelpText>Total time in minutes for Breaks including Lunch.</inlineHelpText>
        <label>Break Times</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10m</fullName>
                </value>
                <value>
                    <fullName>20m</fullName>
                </value>
                <value>
                    <fullName>30m</fullName>
                </value>
                <value>
                    <fullName>40m</fullName>
                </value>
                <value>
                    <fullName>50m</fullName>
                </value>
                <value>
                    <fullName>60m</fullName>
                </value>
                <value>
                    <fullName>70m</fullName>
                </value>
                <value>
                    <fullName>80m</fullName>
                </value>
                <value>
                    <fullName>90m</fullName>
                </value>
                <value>
                    <fullName>100m</fullName>
                </value>
                <value>
                    <fullName>110m</fullName>
                </value>
                <value>
                    <fullName>120m</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Breaks__c</fullName>
        <inlineHelpText>What breaks are needed?</inlineHelpText>
        <label>Breaks</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Account_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Locate the Standard Pricing for the Opportunity and Account</inlineHelpText>
        <label>CC Account Group</label>
        <referenceTo>ccrz__E_AccountGroup__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cart_Id__c</fullName>
        <label>Cart Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_PO__c</fullName>
        <label>Client PO#</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Details__c</fullName>
        <label>Closed Lost Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Reason_New__c</fullName>
        <label>Closed Lost Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Budget Cycle</fullName>
                </value>
                <value>
                    <fullName>Client Ceased to Communicate</fullName>
                </value>
                <value>
                    <fullName>Contract Requirements</fullName>
                </value>
                <value>
                    <fullName>Delivery Timeline unavailable</fullName>
                </value>
                <value>
                    <fullName>Expired Opportunity</fullName>
                </value>
                <value>
                    <fullName>Insufficient number of Participants</fullName>
                </value>
                <value>
                    <fullName>Non standard course not available</fullName>
                </value>
                <value>
                    <fullName>Previous Service Issues</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Pricing Agreement</fullName>
                </value>
                <value>
                    <fullName>Product Features</fullName>
                </value>
                <value>
                    <fullName>Recently trained with competitor</fullName>
                </value>
                <value>
                    <fullName>Recently trained with Red Cross</fullName>
                </value>
                <value>
                    <fullName>Referred to Counsilman-Hunsacker</fullName>
                    <label>Referred to Counsilman-Hunsaker</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closed_Lost_Reason__c</fullName>
        <description>FOR HISTORICAL REPORTING PURPOSES ONLY</description>
        <label>Closed Lost Reason (old)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Client Ceased to Communicate</fullName>
                </value>
                <value>
                    <fullName>Insufficient Staff Size</fullName>
                </value>
                <value>
                    <fullName>Lack of Internal Approval</fullName>
                </value>
                <value>
                    <fullName>Loss to Competitor - AHA</fullName>
                </value>
                <value>
                    <fullName>Loss to Competitor - Other</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Service Delivery Issue</fullName>
                </value>
                <value>
                    <fullName>Time Commitment</fullName>
                </value>
                <value>
                    <fullName>Expired Opportunity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closed_Won_Date__c</fullName>
        <label>Closed Won Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Confirmation_Number__c</fullName>
        <inlineHelpText>Enter a confirmation number if available</inlineHelpText>
        <label>Confirmation Number</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Exception__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Contract is not required for Legal Review.</inlineHelpText>
        <label>Contract Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Sales Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <inlineHelpText>Enter the county of the class location</inlineHelpText>
        <label>County</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coupon_Code__c</fullName>
        <inlineHelpText>Coupon code that supports discount.</inlineHelpText>
        <label>Coupon Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_ID__c</fullName>
        <inlineHelpText>HSSSFA107 - Adult CPR/AED 
HSSFA207 - Pediatric CPR/AED: 
HSSSFA303 - Adult and Pediatric CPR/AED 
HSSSFA404 - Adult CPR/AED and First Aid 
HSSSFA415 - Adult and Pediatric</inlineHelpText>
        <label>Course ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Name__c</fullName>
        <inlineHelpText>The name of the course.</inlineHelpText>
        <label>Course Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_From_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created From Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For TX Pilot</description>
        <label>Customer Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Customer Contact)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Contact_email__c</fullName>
        <description>For TX Pilot</description>
        <formula>Customer_Contact__r.Email</formula>
        <label>Customer Contact email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Contact_phone__c</fullName>
        <description>For TX pilot</description>
        <formula>Customer_Contact__r.Phone</formula>
        <label>Customer Contact phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Contact_phone_ext__c</fullName>
        <description>For TX Pilot</description>
        <formula>Customer_Contact__r.Extension__c</formula>
        <label>Customer Contact phone ext</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is utilized to support the data migration process. It will contain a combination of the source system identifier and the source system&apos;s unique record identifier. This field should be deleted after all migration activities are complete.</description>
        <externalId>true</externalId>
        <label>DM External Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DM_Legacy_Owner_Name__c</fullName>
        <description>This is the record owner&apos;s name from the legacy source system.  This field is used for data migration purposes only.</description>
        <inlineHelpText>This is the record owner&apos;s name from the legacy source system.  This field is used for data migration purposes only.</inlineHelpText>
        <label>DM Legacy Owner Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Sale__c</fullName>
        <description>Date AED device was sold</description>
        <label>Date of Sale</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delta_Data_Migration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Checked, this record was migrated as part of the Delta Data migration project</description>
        <inlineHelpText>If Checked, this record was migrated as part of the Delta Data migration project</inlineHelpText>
        <label>Delta Data Migration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>End date of class</description>
        <inlineHelpText>End date of class</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>05:00 PM</fullName>
                </value>
                <value>
                    <fullName>05:15 PM</fullName>
                </value>
                <value>
                    <fullName>05:30 PM</fullName>
                </value>
                <value>
                    <fullName>05:45 PM</fullName>
                </value>
                <value>
                    <fullName>06:00 PM</fullName>
                </value>
                <value>
                    <fullName>06:15 PM</fullName>
                </value>
                <value>
                    <fullName>06:30 PM</fullName>
                </value>
                <value>
                    <fullName>06:45 PM</fullName>
                </value>
                <value>
                    <fullName>07:00 PM</fullName>
                </value>
                <value>
                    <fullName>07:15 PM</fullName>
                </value>
                <value>
                    <fullName>07:30 PM</fullName>
                </value>
                <value>
                    <fullName>07:45 PM</fullName>
                </value>
                <value>
                    <fullName>08:00 PM</fullName>
                </value>
                <value>
                    <fullName>08:15 PM</fullName>
                </value>
                <value>
                    <fullName>08:30 PM</fullName>
                </value>
                <value>
                    <fullName>08:45 PM</fullName>
                </value>
                <value>
                    <fullName>09:00 PM</fullName>
                </value>
                <value>
                    <fullName>09:15 PM</fullName>
                </value>
                <value>
                    <fullName>09:30 PM</fullName>
                </value>
                <value>
                    <fullName>09:45 PM</fullName>
                </value>
                <value>
                    <fullName>10:00 PM</fullName>
                </value>
                <value>
                    <fullName>10:15 PM</fullName>
                </value>
                <value>
                    <fullName>10:30 PM</fullName>
                </value>
                <value>
                    <fullName>10:45 PM</fullName>
                </value>
                <value>
                    <fullName>11:00 PM</fullName>
                </value>
                <value>
                    <fullName>11:15 PM</fullName>
                </value>
                <value>
                    <fullName>11:30 PM</fullName>
                </value>
                <value>
                    <fullName>11:45 PM</fullName>
                </value>
                <value>
                    <fullName>12:00 AM</fullName>
                </value>
                <value>
                    <fullName>12:15 AM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Equipment_Needed__c</fullName>
        <inlineHelpText>What equipment is needed for the class?</inlineHelpText>
        <label>Equipment Needed</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Equipment__c</fullName>
        <label>Equipment</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DVD and TV on site</fullName>
                </value>
                <value>
                    <fullName>LCD Projector on site</fullName>
                </value>
                <value>
                    <fullName>Instructor to provide AV equipment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Est_Delivery_Fee__c</fullName>
        <label>Est. Delivery Fee</label>
        <summarizedField>OpportunityLineItem.UnitPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.ListPrice</field>
            <operation>equals</operation>
            <value>1.00</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Est_Num_of_Attendees__c</fullName>
        <description>Aggregate of Product quantities excluding delivery fee</description>
        <label>Est. Num of Attendees</label>
        <summarizedField>OpportunityLineItem.Quantity</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.ListPrice</field>
            <operation>notEqual</operation>
            <value>1.00</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Est_Price_per_Attendee__c</fullName>
        <formula>(Amount- Est_Delivery_Fee__c )/ Est_Num_of_Attendees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Est. Price per Attendee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Annual_Enrollees__c</fullName>
        <formula>Text(Account.Estimated_Annual_Enrollees__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Annual Enrollees</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Transaction_Sale__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select if this Sales Opportunity is for a one-off sale for a Full Service Class</inlineHelpText>
        <label>FS Transaction Sale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Features_Attractions_Description__c</fullName>
        <label>Features/Attractions Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Final_Billing_Amount__c</fullName>
        <label>Final Billing Amount</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Highest_Discount__c</fullName>
        <formula>IF(Highest_Product_Discount_Value__c&gt;=Highest_Product_Discount__c,Highest_Product_Discount_Value__c,Highest_Product_Discount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Highest Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Highest_Product_Discount_Value__c</fullName>
        <label>Highest BGST Product Discount</label>
        <summarizedField>OpportunityLineItem.Discount_Value__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Highest_Product_Discount__c</fullName>
        <label>Highest Product Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Instructor_1__c</fullName>
        <inlineHelpText>Enter name and contact information</inlineHelpText>
        <label>Instructor 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Instructor_2__c</fullName>
        <inlineHelpText>Enter name and contact information</inlineHelpText>
        <label>Instructor 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Instructor_3__c</fullName>
        <inlineHelpText>Enter name and contact information</inlineHelpText>
        <label>Instructor 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Invoice_Timing__c</fullName>
        <inlineHelpText>Per Service – Price indicated on product
Per Agreement - $0 on individual visits, full amount billed on final service</inlineHelpText>
        <label>Invoice Timing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Per Service</fullName>
                </value>
                <value>
                    <fullName>Per Agreement</fullName>
                </value>
                <value>
                    <fullName>Prepaid PO</fullName>
                    <isActive>false</isActive>
                    <label>Prepaid PO</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LMS_Org_ID__c</fullName>
        <formula>Account.SABA_LMS_Code__c</formula>
        <label>LMS Org ID</label>
        <type>Text</type>
    </fields>
</CustomObject>